<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/buscar"
        android:title="@string/menu_buscar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"

        app:actionViewClass="android.support.v7.widget.SearchView"/>


    <item
        android:id="@+id/menu_traer_contactos"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_traer_contactos"
        />

    <!--<item

        android:id="@+id/menu_editar"
        android:title="@string/menu_editar"

        android:orderInCategory="1"
        app:showAsAction="never"/>-->

    <item
        android:id="@+id/menu_borrar_algunos"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_borrar_algunos"
        />

    <item
        android:id="@+id/menu_borrar_todos"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_borrar_todos"
        />


    <!--android:icon="@drawable/amigos"-->
    <!--android:icon="@drawable/importado"-->
</menu>